<resources>
    <string name="app_name">MovieCatalogues</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="tvshow">Tv Show</string>
    <string name="movie">Movie</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date %s</string>
    <string name="description_course">Description</string>
    <string name="description_movie">Description</string>
    <string name="description">description text</string>
    <string name="title_activity_detail_tvshow">Title</string>
</resources>